# soft-computing-mid-term

./: .gitignore  USER_MANUAL.md
ai_train/: helper.py  main.ipynb  main_ga.ipynb  pyproject.toml  stage1_manual_fis.ipynb  stage3_anfis.ipynb
