[project]
name = "ai-train"
version = "0.1.0"
description = "AI model training scripts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "pygad>=3.6.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
